--- a/navbar.css
+++ b/navbar.css
@@ -241,6 +241,7 @@ a{
 
     .login-grey-inactive{
         display: none;
+        z-index: 99;
     }
     .login-grey{
         display: inline-block;
@@ -249,7 +250,7 @@ a{
         width: 100%;
         height: 100%;
         background-color: #000000b4;
-        z-index: 10;
+        z-index: 9;
     }
     .login-page{
         display: flex;
